--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ img{
     width:100%;
 }
 .invoiceFooter{
-    padding:66px 100px 55px 100px;
+    padding:66px;
 }
 .invoiceDetails{
     margin-top:36px;
@@ -58,6 +58,7 @@ img{
 }
 .invoiceBody .row .row{
     justify-content: left;
+    width: 100%;
 }
 .invoiceBody{
     margin-top:-240px;
@@ -146,4 +147,15 @@ padding:30px 0;
 }
 .invoiceTotalFooter  p:last-child{
     font-weight: 500;
+}
+@media(max-width:768px){
+    .invoiceTotal{
+        width:100%;
+    }
+    .invoiceFooter{
+        padding:50px 0
+    }
+    .customDetails{
+        margin-bottom: 20px;;
+    }
 }
