--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ img{
 }
 .invoiceTable{
     width:100%;
+    margin-top: 30px;
 }
 .invoiceTable thead{
     width:100%;
@@ -155,7 +156,5 @@ padding:30px 0;
     .invoiceFooter{
         padding:50px 0
     }
-    .customDetails{
-        margin-bottom: 20px;;
-    }
+
 }
