--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 body{
     background-color: rgba(241, 247, 255,.81);
     font-family: 'Montserrat', sans-serif;
-    font-size: 15px;;
+    font-size: 15px;
+    font-weight: 400;
 }
 ul{
     padding:0;
@@ -19,7 +20,12 @@ li{
     border-radius:0 0 15px 15px;
     overflow: hidden;
     height: 380px;
-    width:100%;;
+    width:100%;
+ 
+}
+.invoiceHeader{
+    padding-bottom: 18px;
+    border-bottom: 1px solid #E5E5E5;;
 }
 .invoiceBody .row {
     display: flex;
@@ -46,13 +52,15 @@ img{
 .invoiceDetailsTitle{
     font-weight: 600;
     color:#C57A2D;
+    margin:0;
     margin-bottom:20px;
+    font-size:1em;
 }
 .invoiceDetailsList{
     list-style-type: none;
 }
 .invoiceDetailsList li{
-    font-size:15px;
+    font-size: 1em;
     color:#7A7A7A;
     margin-bottom: 10px;;
 }
@@ -125,6 +133,7 @@ background-color: #F8F8F8;
 .invoiceTotalTitle span{
     color:#18355C;
     font-weight: 500;
+    font-size: 1em;;
 }
 .invoiceNote{
 padding:30px 0;
@@ -133,13 +142,13 @@ padding:30px 0;
     border-bottom: 1px solid #DBDBDB;
 }
 .invoiceNote p{
-    font-size:15px;
     color:#7A7A7A;
 } 
 .invoiceNote  h4{
  margin-bottom: 19px;
 }
 .invoiceTotalDetails .invoiceDetailsTitle{
+    font-size: 1em;;
     font-weight: 700;
 }
 .invoiceTotalFooter p{
@@ -149,12 +158,43 @@ padding:30px 0;
 .invoiceTotalFooter  p:last-child{
     font-weight: 500;
 }
-@media(max-width:768px){
+@media (min-width:767px) and (max-width:1300px){
+    body{
+        font-size:10px;
+    }
+    .headerBackground{
+        height:200px;
+    }
+    .invoiceBody{
+        margin-top:-150px
+    }
+    .jawainvoice{
+        padding:10px
+    }
+}
+@media (max-width:767px){
+    body{
+        font-size:9px;
+    }
     .invoiceTotal{
         width:100%;
     }
     .invoiceFooter{
         padding:50px 0
     }
-
+    .headerBackground{
+        height:170px;
+    }
+    .invoiceBody{
+        margin-top:-120px
+    }
+    .jawainvoice{
+        padding:10px;
+    }
+    .invoiceDetails{
+        margin-top: 15px;
+    }
+    .invoiceDetailsTitle{
+        margin-bottom: 10px;;
+    }
 }
