--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
     font-weight: 400;
+    padding-bottom: 120px;;
 }
 ul{
     padding:0;
