--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ padding:30px 0;
 @media (min-width:767px) and (max-width:1300px){
     body{
         font-size:10px;
+        padding-bottom: 100px;
     }
     .headerBackground{
         height:200px;
@@ -178,6 +179,7 @@ padding:30px 0;
 @media (max-width:767px){
     body{
         font-size:7px;
+        padding-bottom: 80px;
     }
     .invoiceTotal{
         width:100%;
